tests/snapshots/integration__integration_tests__shell_wrapper__unix_tests__switch_with_execute_fish.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: "&output.combined"
---

[32m✓[39m [32mCreated branch [1mtest-exec[22m from [1mmain[22m and worktree @ [1m_REPO_.test-exec[22m[39m
[2m↳[22m [2mTo customize worktree locations, run [4mwt config create[24m[22m
[36m◎[39m [36mExecuting (--execute):[39m
[107m [0m [2m[0m[2m[34msh[0m[2m [0m[2m[36m-c[0m[2m [0m[2m[32m'test -t 1 && printf '[0m[2m\'[0m[2m[32m'EXEC_STDOUT_TTY:true\n'[0m[2m\'[0m[2m[32m''[0m
EXEC_STDOUT_TTY:true
[0m
